--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "vyral",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "main": "expo/AppEntry",
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
+    "expo": "~50.0.6",
     "expo-linear-gradient": "~13.0.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
