Integrate Supabase client and data fetching

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.9",
+    "@supabase/supabase-js": "^2.42.3",
     "expo": "~50.0.6",
     "expo-linear-gradient": "~13.0.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
